--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,34 @@ networks:
       com.docker.network.driver.mtu: 1280
 services:
   api:
-    container_name: receipt-processor
+    container_name: api
     build:
       context: .
+      target: api
     networks:
     - local
     ports:
-    - "8080:8080"
+    - 8080:8080
     environment:
-      ENV: dev
+      PORT: 8080
+      RECEIPT_QUEUE: receipt_processor
+      REDIS_HOST: redis
+  backend:
+    container_name: backend
+    build:
+      context: .
+      target: backend
+    networks:
+    - local
+    environment:
+      RECEIPT_QUEUE: receipt_processor
+      REDIS_HOST: redis
+  redis:
+    container_name: redis
+    image: redis
+    restart: always
+    networks:
+    - local
+    ports:
+    - 6379:6379
+ 
