--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,8 +14,10 @@ services:
     ports:
     - 8080:8080
     environment:
+      &env
       PORT: 8080
       RECEIPT_QUEUE: receipt_processor
+      RECEIPT_DATABASE: receipt_database
       REDIS_HOST: redis
   backend:
     container_name: backend
@@ -25,8 +27,7 @@ services:
     networks:
     - local
     environment:
-      RECEIPT_QUEUE: receipt_processor
-      REDIS_HOST: redis
+      <<: *env
   redis:
     container_name: redis
     image: redis
